@@ -18,6 +18,7 @@ Device specific changes/fixes
 	* iMax B6 mini - add support (iMax B6 AC V2)
 	* PolaronPro - fix cell voltage update
 	* Polaron* - fix measurement index position reference (according available specification)
+	* GPS-Logger2 - fix device visualization dialog
 	
 History analysis
 	# Flexibility
